fix: fix display on mobile - vh removal

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,5 +1,4 @@
 .about-me {
-    min-height: 100vh;
     background-color: #f1f1f1;
     display: flex;
     flex-wrap: wrap;
