--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,7 +3,6 @@ footer {
     background-blend-mode: darken;
     text-align: right;
     border-top: 1px solid #0a1a27;
-    min-height: calc(6vh - 1rem);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
