--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,5 +1,4 @@
 .projects {
-    min-height: calc(100vh - 72px);
     padding: 36px 0 36px 0;
     background-color: #f1f1f1;
 }
